trying to fix poor view on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,7 @@ h2 {
   font-size: 40px;
 }
 p {
+  display: flex;
   margin: 0;
   font-size: 30px;
   font-weight: 300;
@@ -125,6 +126,7 @@ a {
   align-items: center;
 }
 .headshot {
+  display: flex;
   width: 300px;
   border-radius: 150px;
 }
@@ -133,7 +135,7 @@ a {
   display: flex;
   justify-content: space-around;
 }
-@media only screen and (max-device-width: 1000px) {
+@media only screen and (max-device-width: 1000px) and (min-device-width: 480px) {
   .project-container {
     display: flex;
     flex-wrap: wrap;
@@ -166,7 +168,7 @@ hr {
 .hamburger:focus {
   outline: 0;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-device-width: 1000px) and (min-device-width: 480px) {
   .hamburger {
     display: block;
     border: 0;
